# aider-gemini

./: .gitignore  Makefile  README.md  pyproject.toml
